--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -57,16 +57,40 @@
 				background: black;
 				position: absolute;
 				top: 50%;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-        transition: all 0.05s;
-        transition-timing-function: ease-in-out;
+				transform-origin: 100%;
+				transform: rotate(90deg);
+				transition: all 0.05s;
+				transition-timing-function: ease-in-out;
 			}
-
 		</style>
 
 		<script>
+			const secondHand = document.querySelector('.second-hand')
+			const minHand = document.querySelector('.min-hand')
+			const hourHand = document.querySelector('.hour-hand')
 
-    </script>
+			function setDate() {
+				const now = new Date()
+				const seconds = now.getSeconds()
+				const secondsDegrees = ((seconds / 60) * 360) + 90
+				secondHand.style.transform = `rotate(${secondsDegrees}deg)`
+				console.log(seconds)
+
+				const mins = now.getMinutes()
+				const minsDegrees = ( (mins / 60) *360) + 90
+				minHand.style.transform = `rotate(${minsDegrees}deg)`
+				console.log('mins :>> ', mins);
+
+				let hours = now.getHours()
+				const hoursDegrees = (( hours / 12) * 360) + 90
+				hourHand.style.transform = `rotate(${hoursDegrees}deg)`
+
+				const hoursInFormat = now.geth
+				console.log('hours :>> ', hours);
+			}
+
+			setInterval(setDate, 1000)
+
+		</script>
 	</body>
 </html>
