--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,15 +38,20 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventorsFrom1500s = inventors.filter((inventor) => inventor.year >= 1500 && inventor.year < 1600);
+    console.log('inventorsFrom1500s :>> ', inventorsFrom1500s);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    console.log(inventors.map(inventor => `${inventor.first} ${inventor.last}`))
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    console.log(inventors.sort((inventorA, inventorB) => inventorA.year - inventorB.year))
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    
 
     // 5. Sort the inventors by years lived
 
