--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -19,29 +19,50 @@
     }
 
     // Regular
-
+    console.log('hello')
     // Interpolated
-
+    console.log('hello I am a %s string!', 'teste')
     // Styled
-
+    console.log('%cI am some great text', 'font-size: 20px; background: red')
     // warning!
-
+    console.warn('oh shit')
     // Error :|
-
+    console.error('fudeuuu')
     // Info
-
+    console.info('crocodiles eat 3-4 people per year')
     // Testing
-
+    const p = document.querySelector('p')
+    console.assert(1 === 1, 'that is wrong')
+    console.assert(1 === 2, 'that is wrong')
     // clearing
-
+    //console.clear()
     // Viewing DOM Elements
-
+    console.log(p)
+    console.dir(p)
     // Grouping together
-
+    dogs.forEach(dog => {
+      console.group(`${dog.name}`)
+      //console.groupCollapsed(`${dog.name}`)
+      console.log(`this is ${dog.name}`)
+      console.log(`${dog.name} is ${dog.age} years old`)
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`)
+      console.groupEnd(`${dog.name}`)
+    })
     // counting
-
+    console.count('wes')
+    console.count('wes')
+    console.count('wes')
+    console.count('wes')
     // timing
+    console.time('fetching data')
+    fetch('https://api.github.com/users/edulange')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data')
+        console.log(data)
+      })
 
+      console.table(dogs)
   </script>
 </body>
 </html>
