--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -96,10 +96,32 @@
 		</div>
 
 		<script>
-      const items = document.querySelectorAll('.item')
-      items.forEach(item => item.addEventListener('click', () => {
-        console.log('clicado')
-      }))
-    </script>
+			const checkboxes = document.querySelectorAll('.inbox [type="checkbox"]')
+			let lastChecked;
+			
+			checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck))
+
+			function handleCheck(e) {
+				//check if they had the shift key down
+				// and check that they are checking it
+				let inBetween = false
+				if(e.shiftKey && this.checked) {
+					//loop every single checkbox
+					checkboxes.forEach(checkbox => {
+						console.log(checkbox)
+						if(checkbox === this || checkbox === lastChecked) {
+							inBetween = !inBetween
+							console.log('Starting to check them inbetween')
+						}
+
+						if(inBetween) {
+							checkbox.checked = true
+						}
+					})
+				}
+
+				lastChecked = this
+			}
+		</script>
 	</body>
 </html>
